# mlx_monitor

./: LICENSE  README.md  monitor.py  monitor.spec  pyproject.toml  requirements.txt
src/: __main__.py
src/mlx_monitor.egg-info/: PKG-INFO  SOURCES.txt
src/python_mlx_monitor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
